--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
 body {
-    background-color: aliceblue;
+    background-image: url(https://images-na.ssl-images-amazon.com/images/I/91ONL5ZYoqL._SY741_.jpg);
+}
+
+.jumbotron {
+    margin: 2em;
 }
